# todo-list

./: Cargo.toml  README.md  state.json
src/: main.rs  processes.rs  state.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
src/to_do/structs/json_serialization/: to_do_items.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/: index.rs  mod.rs  path.rs  token.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/todo/: create.rs  edit.rs  get.rs  mod.rs
templates/: main.html
