[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "1.0",default-features = false,features = ["alloc"]}
actix-web = "3.0"
actix-service = "2.0.2"
actix-rt = "2.6.0"
futures = "0.3.5"
actix-multipart = "0.3.0"
futures-util = "0.3"
sanitize-filename = "0.3"
uuid = { version = "0.8", features = ["v4"] }
serde = "1"
log = "0.4.14"
env_logger = "0.9.0"